feat: add validation email
